# riptide_hardware

./: CMakeLists.txt  package.xml  riptide_hardware.xml
include/riptide_hardware/: actuators_commands.hpp  actuators_hardware.hpp  battery_card_hardware.hpp  echosounder_hardware.hpp  imu_hardware.hpp  multiplexer_commands.hpp  pressure_hardware.hpp  rc_commands.hpp  sparton_ahrs_m1_hardware.hpp  tail_hardware.hpp
src/: actuators_hardware.cpp  battery_card_hardware.cpp  echosounder_hardware.cpp  imu_hardware.cpp  pressure_hardware.cpp  sparton_ahrs_m1_hardware.cpp  tail_hardware.cpp
test/: test_sparton_ahrs_m1_hwi.cpp
